2018-04-18  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/gbench.c: Missing variable types.

2018-04-18  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/Jamfile: Mention `output.c'.
	* objs/.gitignore: Ignore almost everything.

2018-04-18  Werner Lemberg  <wl@gnu.org>

	* Jamrules (FT2_LIB), src/Jamfile (COMMON_LIB): Don't use $(SUFLIB).

	Jam automatically uses them.

2018-04-17  Werner Lemberg  <wl@gnu.org>

	Move `obj' directory to `objs'.

	This is both for consistency with the FreeType library tree and
	better jam support.

	* Makefile (OBJ_DIR_2, clean_demo, distclean_demo), mac/Makefile
	(OBJ_DIR_2), mac/ftoldmac.m68k_far.make.txt (ObjDir),
	mac/ftoldmac.ppc_classic.make.txt (ObjDir), vms_make.com (OBJDIR,
	grinit.obj, grx11.obj): Updated.

2018-01-26  Ben Wagner  <bungeman@google.com>

	* src/ftmulti.c (LOG) [DEBUG]: Modernize.

2018-01-08  Werner Lemberg  <wl@gnu.org>

	* Version 2.9 released.
	=======================


	Tag sources with `VER-2-9.

	* README: Updated.
	* src/*.1: Updated.
	* src/ftinspect/ftinspect.pro: Updated.

2018-01-07  Werner Lemberg  <wl@gnu.org>

	* Makefile (LINK_LIBS): Add `LIB_CLOCK_GETTIME' (#52824).

2018-01-06  Werner Lemberg  <wl@gnu.org>

	Use new `FT_Done_Var_MM' function.

	* src/ftdump.c (Print_MM_Axes), src/ftgrid.c (main), src/ftmulti.c
	(main): Do it.

2017-12-31  Werner Lemberg  <wl@gnu.org>

	[ttdebug] Fix compiler warnings and run-time errors.

	* src/ttdebug.c (Cur_U_Line): Remove useless casts to `unsigned' and fix
	the necessary ones.
	(RunIns): Protect `FT_MEM_COPY' calls.

2017-12-30  Werner Lemberg  <wl@gnu.org>

	[ttdebug] Key `K' shows full stack.

	* src/ttdebug.c (RunIns): Update help display.
	Handle key `K'.

2017-12-30  Werner Lemberg  <wl@gnu.org>

	[ttdebug] Key `I' toggles hexadecimal/decimal numbers display.

	* src/ttdebug.c (use_hex): New global variable.
	(Cur_U_Line): Use it.
	(RunIns): Use it.
	Update help display.
	Handle key `I'.

2017-12-27  Werner Lemberg  <wl@gnu.org>
